tests/a/tests/integrity/fail/if/if.0.stderr
error: expected {root}{root}, found {root}{c,root}
 --> tests/integrity/fail/if/if.0.rs:9:9
  |
9 |         5
  |         ^
